--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -20,22 +20,27 @@
 			</releases>
 			<id>p2Repo</id>
 			<name>p2Repo</name>
-			<url>http://51.255.46.42/updates</url>
+			<url>http://updates.gama-platform.org/1.8.2</url>
 		</repository>
 
 		<repository>
-			<id>eclipse-2019-03</id>
-			<url>http://download.eclipse.org/releases/2019-03</url>
+			<id>eclipse-2021-12</id>
+			<url>https://download.eclipse.org/releases/2021-12</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
 			<id>eclipse-graphiti</id>
-			<url>http://download.eclipse.org/graphiti/updates/milestones/</url>
+			<url>https://download.eclipse.org/graphiti/updates/0.18.0</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>eclipse-Eclipse Layout Kernel </id>
+			<url>https://download.eclipse.org/elk/updates/nightly</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
 			<id>eclipse-xtext</id>
-			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
+			<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.25.0/</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
@@ -52,11 +57,12 @@
 	</repositories>
 
 
-	<dependencies>
+	
+	<dependencies> 
 		<dependency>
 			<groupId>msi.gama</groupId>
 			<artifactId>ummisco.gama.annotations</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>1.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>msi.gama</groupId>
@@ -65,125 +71,67 @@
 		</dependency>
 		<dependency>
 			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.core</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<artifactId>msi.gama.core</artifactId> 
+			<version>1.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>msi.gama</groupId>
 			<artifactId>msi.gama.ext</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>1.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.application</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.lang.gaml</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>ummisco.gama.ui.shared</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>ummisco.gama.ui.modeling</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gaml.architecture.simplebdi</groupId>
-			<artifactId>msi.gaml.architecture.simplebdi</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>ummisco.gaml.extensions.maths</groupId>
-			<artifactId>ummisco.gaml.extensions.maths</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<artifactId>msi.gama.headless</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>ummisco.gama.ui.navigator</groupId>
 			<artifactId>ummisco.gama.ui.navigator</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
+			<version>1.8.2-SNAPSHOT</version>
 		</dependency>
-		
-	</dependencies>
+		<dependency>
+			<groupId>ummisco.gama.ui.experiment</groupId>
+			<artifactId>ummisco.gama.ui.experiment</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.ui.modeling</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.ui.shared</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.lang.gaml</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>ummisco.gaml.extensions.maths</groupId>
+			<artifactId>ummisco.gaml.extensions.maths</artifactId>
+			<version>1.8.2-SNAPSHOT</version>
+		</dependency>
+	</dependencies> 
 
 
 
 	<modules>
-		<module>../idees.gama.graphicalmodeling</module>
 		<module>../idees.gama.emf.metamodel</module>
+		<module>../idees.gama.graphicalmodeling</module>
 		<module>../idees.gama.feature.graphical_modeling</module>
 		<module>../idees.gama.p2site</module>
+<!-- 
+-->
 	</modules>
 	<properties>
-		<p2-maven.version>1.2.0-SNAPSHOT</p2-maven.version>
-		<tycho.version>0.25.0</tycho.version>
-		<project.version>1.7.0-SNAPSHOT</project.version>
-		<batik.version>1.7</batik.version>
-		<p2-maven.version>1.2.0-SNAPSHOT</p2-maven.version>
-		<jetty-maven.version>8.1.5.v20120716</jetty-maven.version>
-		<tycho.version>0.25.0</tycho.version>
-		<project.version>1.7.0-SNAPSHOT</project.version>
+		<tycho.version>2.6.0</tycho.version>
+		<jdk.version>17</jdk.version>
+		<project.version>1.8.2-SNAPSHOT</project.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geotools.version>14.5</geotools.version>
-		<math3.version>3.1.1</math3.version>
-		<guava.version>15.0</guava.version>
-		<imageio.version>1.1.11</imageio.version>
-		<jai.version>1.1.3</jai.version>
-		<jt.version>1.3.1</jt.version>
-		<graphstream.version>1.3</graphstream.version>
-		<jfreechart.version>1.0.19</jfreechart.version>
-		<jcommon.version>1.0.23</jcommon.version>
-		<jgrapht.version>0.9.1</jgrapht.version>
-		<streamex.version>0.6.1</streamex.version>
-		<kabeja.version>0.4</kabeja.version>
-		<olap4j.version>1.2.0</olap4j.version>
-		<osmosis.version>0.45</osmosis.version>
-		<spring.version>3.1.2.RELEASE</spring.version>
-		<prefuse.version>beta-20071021</prefuse.version>
-		<RCaller.version>2.7</RCaller.version>
-		<svgsalamander.version>1.0</svgsalamander.version>
-		<trove4j.version>3.0.3</trove4j.version>
-		<vecmath.version>1.5.2</vecmath.version>
-		<jts.version>1.14.0</jts.version>
-		<jaimageio.version>1.1</jaimageio.version>
-		<org.eclipse.emf.ecore.version>2.11.0-v20150123-0347</org.eclipse.emf.ecore.version>
-		<com.google.inject.version>3.0</com.google.inject.version>
-		<common-lang.version>2.6</common-lang.version>
-		<org.eclipse.emf.common.version>2.11.0-v20150123-0347</org.eclipse.emf.common.version>
-		<org.eclipse.core.runtime.version>3.11.0.v20150405-1723</org.eclipse.core.runtime.version>
-		<com.ibm.icu.version>54.1.1</com.ibm.icu.version>
-		<javax.annotation.version>1.2</javax.annotation.version>
-		<javax.inject.version>1</javax.inject.version>
-		<xml-apis.version>1.3.04</xml-apis.version>
-		<antlr-runtime.version>3.2</antlr-runtime.version>
-		<batik.version>1.6-1</batik.version>
-		<commons-cli.version>1.2</commons-cli.version>
-		<commons-codec.version>1.6</commons-codec.version>
-		<commons-io.version>2.2</commons-io.version>
-		<commons-jxpath.version>1.3</commons-jxpath.version>
-		<commons-lang.version>2.6</commons-lang.version>
-		<commons-logging.version>1.1.1</commons-logging.version>
-		<org.apache.felix.gogo.command.version>0.10.0</org.apache.felix.gogo.command.version>
-		<org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
-		<org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
-		<httpclient.version>4.3.6</httpclient.version>
-		<httpcore.version>4.3.3</httpcore.version>
-		<log4j.version>1.2.15</log4j.version>
-		<org.mod4j.org.eclipse.compare.version>3.5.0</org.mod4j.org.eclipse.compare.version>
-		<org.eclipse.core.commands.version>3.3.0-I20070605-0010</org.eclipse.core.commands.version>
-		<org.eclipse.core.contenttype.version>3.4.200-v20140207-1251</org.eclipse.core.contenttype.version>
-		<org.eclipse.core.databinding.version>1.0.0-I20070606-0010</org.eclipse.core.databinding.version>
-		<org.eclipse.core.databinding.beans.version>1.0.0-I20070606-0010</org.eclipse.core.databinding.beans.version>
-		<org.mod4j.org.eclipse.core.databinding.property.version>1.2.0</org.mod4j.org.eclipse.core.databinding.property.version>
-		<org.mod4j.org.eclipse.core.databinding.observable.version>1.2.0</org.mod4j.org.eclipse.core.databinding.observable.version>
-		<org.eclipse.core.expressions.version>3.3.0-v20070606-0010</org.eclipse.core.expressions.version>
-		<org.eclipse.core.filebuffers.version>3.3.0-v20070606-0010</org.eclipse.core.filebuffers.version>
-		<addjars.version>1.0.5</addjars.version>
+		
 	</properties>
 
 	<profiles>
@@ -266,19 +214,19 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-compiler-plugin</artifactId>
-				<version>0.25.0</version>
+				<version>${tycho.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.7.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -287,12 +235,13 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 					<!--<compilerArgument>-proc:none</compilerArgument> -->
 					<annotationProcessors>
 						<annotationProcessor>msi.gama.precompiler.GamaProcessor</annotationProcessor>
 					</annotationProcessors>
+					<executionEnvironment>JavaSE-${jdk.version}</executionEnvironment>
 				</configuration>
 				<dependencies>
 					<!--dependency containing the annotation processor specified in the 
@@ -326,11 +275,6 @@
 						<filter>
 							<type>eclipse-plugin</type>
 							<id>org.eclipse.jdt.ui</id>
-							<removeAll />
-						</filter>
-						<filter>
-							<type>eclipse-plugin</type>
-							<id>org.eclipse.debug.core</id>
 							<removeAll />
 						</filter>
 						<filter>
@@ -482,27 +426,13 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
+					<executionEnvironment>JavaSE-${jdk.version}</executionEnvironment>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
 				<version>${tycho.version}</version>
-			</plugin>
-
-			<plugin>
-				<groupId>name.abuchen</groupId>
-				<artifactId>fix-info-plist-maven-plugin</artifactId>
-				<version>1.0</version>
 			</plugin>
 
 			<plugin>
